add stats into event
