# modules/event/stats-model.go
@@ -1,14 +1,15 @@
-package planning
+package event
 
 import (
 	"encoding/json"
 	"errors"
+	"fmt"
 	"math"
 	"time"
 )
 
-// swagger:model Planning_Stat
-type Planning_Stat struct {
+// swagger:model Event_Stat
+type Event_Stat struct {
 	// Id of the entry
 	// in: int
 	// read only: true
@@ -18,31 +19,56 @@ type Planning_Stat struct {
 	// example: 2023-01
 	// required: true
 	ArchiveDate string `json:"archive_date"`
-	// Number of planning by location
+	// Number of event by location
 	// in: json
 	// example: {"MDE": 12, "MDEL": 4}
 	// read only: true
 	NbPerLocation json.RawMessage `json:"nb_per_location"`
-	// Number of planning by type
+	// Number of event by type
 	// in: json
-	// example: {"permanence": 12, "event": 4}
+	// example: {"NEM": 12, "Gala": 4}
 	// read only: true
 	NbPerType json.RawMessage `json:"nb_per_type"`
-	// Number of planning total
+	// Number of event by price
+	// in: json
+	// example: {"10": 2, "5": 4, "0": 1}
+	// read only: true
+	NbPerPrice json.RawMessage `json:"nb_per_price"`
+	// Number of event cancel
+	// in: int
+	// example: 12
+	// read only: true
+	NbCancel int `json:"nb_cancel"`
+	// Number of event total
 	// in: int
 	// example: 12
 	// read only: true
 	NbTotal int `json:"nb_total"`
-	// Average attendee per type of planning
+	// Average fulfill per type of event
 	// in: json
-	// example: {"event": 12.5, "permanence": 5}
+	// example: {"NEM": 99.9, "gala": 80}
+	// read only: true
+	FulfillAvgPerType json.RawMessage `json:"tx_avg_fulfill_per_type"`
+	// Average attendee per type of event
+	// in: json
+	// example: {"NEM": 12.5, "gala": 5}
 	// read only: true
 	AvgAttPerType json.RawMessage `json:"nb_avg_att_per_type"`
-	// Number of planning attendees total
+	// Average staff per type of event
+	// in: json
+	// example: {"NEM": 12.5, "gala": 5}
+	// read only: true
+	AvgStaPerType json.RawMessage `json:"nb_avg_sta_per_type"`
+	// Number of event attendees total
 	// in: int
 	// example: 12
 	// read only: true
 	NbAttTotal int `json:"nb_att_total"`
+	// Number of event staffs total
+	// in: int
+	// example: 12
+	// read only: true
+	NbStaTotal int `json:"nb_sta_total"`
 	// CreatedAt date of the stat
 	// in: time.Time
 	// read only: true
@@ -53,23 +79,29 @@ type Planning_Stat struct {
 	UpdatedAt time.Time `json:"updated_at"`
 }
 
-type Planning_Stats []Planning_Stat
+type Event_Stats []Event_Stat
 
-func NewMonthlyStat(stat *Planning_Stat) {
+func NewMonthlyStat(stat *Event_Stat) {
 	var err error
 	stmt, _ := TheDb().Prepare(
 		"INSERT INTO " + db_name_monthly_stat + `
-			(archive_date, nb_per_location, nb_per_type, nb_total, nb_avg_att_per_type,
-			nb_att_total, created_at, updated_at)
-		VALUES (?,?,?,?,?,?,?,?);`,
+			(archive_date, nb_per_location, nb_per_type, nb_per_price, nb_cancel, nb_total,
+			tx_avg_fulfill_per_type, nb_avg_att_per_type, nb_avg_sta_per_type, nb_att_total, nb_sta_total,
+			created_at, updated_at)
+		VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?);`,
 	)
 	_, err = stmt.Exec(
 		stat.ArchiveDate,
 		stat.NbPerLocation,
 		stat.NbPerType,
+		stat.NbPerPrice,
+		stat.NbCancel,
 		stat.NbTotal,
+		stat.FulfillAvgPerType,
 		stat.AvgAttPerType,
+		stat.AvgStaPerType,
 		stat.NbAttTotal,
+		stat.NbStaTotal,
 		stat.CreatedAt,
 		stat.UpdatedAt,
 	)
@@ -78,11 +110,12 @@ func NewMonthlyStat(stat *Planning_Stat) {
 	}
 }
 
-func UpdateMonthlyStat(stat *Planning_Stat) {
+func UpdateMonthlyStat(stat *Event_Stat) {
 	stmt, err := TheDb().Prepare(
 		"UPDATE " + db_name_monthly_stat + ` SET
-			archive_date=?, nb_per_location=?, nb_per_type=?, nb_total=?, nb_avg_att_per_type=?,
-			nb_att_total=?, updated_at=?
+			archive_date=?, nb_per_location=?, nb_per_type=?, nb_per_price=?, nb_cancel=?,
+			nb_total=?, tx_avg_fulfill_per_type=?, nb_avg_att_per_type=?, nb_avg_sta_per_type=?,
+			nb_att_total=?, nb_sta_total=?, updated_at=?
 		WHERE id=?;`,
 	)
 	if err != nil {
@@ -93,9 +126,14 @@ func UpdateMonthlyStat(stat *Planning_Stat) {
 		stat.ArchiveDate,
 		stat.NbPerLocation,
 		stat.NbPerType,
+		stat.NbPerPrice,
+		stat.NbCancel,
 		stat.NbTotal,
+		stat.FulfillAvgPerType,
 		stat.AvgAttPerType,
+		stat.AvgStaPerType,
 		stat.NbAttTotal,
+		stat.NbStaTotal,
 		stat.UpdatedAt,
 		stat.Id,
 	)
@@ -106,7 +144,7 @@ func UpdateMonthlyStat(stat *Planning_Stat) {
 }
 
 func AutoNewMonthlyStat(archive_date ...string) {
-	var stat Planning_Stat
+	var stat Event_Stat
 	var err error
 	stat.CreatedAt = time.Now()
 	stat.UpdatedAt = time.Now()
@@ -117,7 +155,7 @@ func AutoNewMonthlyStat(archive_date ...string) {
 	} else {
 		stat.ArchiveDate = stat.CreatedAt.AddDate(0, -1, 0).Format("2006-01")
 	}
-	month_stats := FindPlanningsByDate(stat.ArchiveDate)
+	month_stats := FindEventsByDate(stat.ArchiveDate)
 	if len(*month_stats) == 0 {
 		TheLogger().LogWarning(log_name_monthly_stat, "no data for this date.", errors.New("no data"))
 		return
@@ -126,18 +164,36 @@ func AutoNewMonthlyStat(archive_date ...string) {
 	// Merge data
 	countLocation := make(map[string]int)
 	countType := make(map[string]int)
+	countPrice := make(map[string]int)
+	countCancel := 0
+	avgAttPercent := make(map[string]float64)
+	fulfillAvgType := make(map[string]float64)
 	avgAtt := make(map[string]float64)
 	avgAttType := make(map[string]int)
+	avgSta := make(map[string]float64)
+	avgStaType := make(map[string]int)
 	countAttTotal := 0
-	for _, planning := range *month_stats {
-		atts := FindAttendeeByPlanningId(planning.Id)
-		countLocation[planning.Location]++
-		countType[planning.Type]++
-		avgAtt[planning.Type] += float64(len(*atts))
-		countAttTotal += len(*atts)
+	countStaTotal := 0
+	for _, event := range *month_stats {
+		staffs := FindStaffByEventId(event.Id)
+		countLocation[event.Location]++
+		countType[event.Type]++
+		countPrice[fmt.Sprintf("%.2f", event.Price)]++
+		if !event.Actif {
+			countCancel++
+		}
+		avgAttPercent[event.Type] += float64(
+			float64(event.NbSpotsTaken)/float64(event.NbSpotsMax),
+		) * 100
+		avgAtt[event.Type] += float64(event.NbSpotsTaken)
+		avgSta[event.Type] += float64(len(*staffs))
+		countAttTotal += event.NbSpotsTaken
+		countStaTotal += len(*staffs)
 	}
 	for key, value := range countType {
+		fulfillAvgType[key] = math.Round(float64(avgAttPercent[key])/float64(value)*100) / 100
 		avgAttType[key] = int(math.RoundToEven(avgAtt[key] / float64(value)))
+		avgStaType[key] = int(math.RoundToEven(avgSta[key] / float64(value)))
 	}
 
 	stat.NbPerLocation, err = json.Marshal(countLocation)
@@ -148,12 +204,26 @@ func AutoNewMonthlyStat(archive_date ...string) {
 	if err != nil {
 		TheLogger().LogError(log_name_monthly_stat, "problem with encoder.", err)
 	}
+	stat.NbPerPrice, err = json.Marshal(countPrice)
+	if err != nil {
+		TheLogger().LogError(log_name_monthly_stat, "problem with encoder.", err)
+	}
 	stat.NbTotal = len(*month_stats)
+	stat.NbCancel = countCancel
+	stat.FulfillAvgPerType, err = json.Marshal(fulfillAvgType)
+	if err != nil {
+		TheLogger().LogError(log_name_monthly_stat, "problem with encoder.", err)
+	}
 	stat.AvgAttPerType, err = json.Marshal(avgAttType)
 	if err != nil {
 		TheLogger().LogError(log_name_monthly_stat, "problem with encoder.", err)
 	}
+	stat.AvgStaPerType, err = json.Marshal(avgStaType)
+	if err != nil {
+		TheLogger().LogError(log_name_monthly_stat, "problem with encoder.", err)
+	}
 	stat.NbAttTotal = countAttTotal
+	stat.NbStaTotal = countStaTotal
 
 	// Add data into db
 	previous_gen := FindMonthlyStatByDate(stat.ArchiveDate)
@@ -166,8 +236,8 @@ func AutoNewMonthlyStat(archive_date ...string) {
 	}
 }
 
-func FindMonthlyStatByDate(archive_date string) *Planning_Stat {
-	var stat Planning_Stat
+func FindMonthlyStatByDate(archive_date string) *Event_Stat {
+	var stat Event_Stat
 
 	rows := TheDb().QueryRow(
 		"SELECT * FROM "+db_name_monthly_stat+" WHERE archive_date = ?;",
@@ -178,9 +248,14 @@ func FindMonthlyStatByDate(archive_date string) *Planning_Stat {
 		&stat.ArchiveDate,
 		&stat.NbPerLocation,
 		&stat.NbPerType,
+		&stat.NbPerPrice,
+		&stat.NbCancel,
 		&stat.NbTotal,
+		&stat.FulfillAvgPerType,
 		&stat.AvgAttPerType,
+		&stat.AvgStaPerType,
 		&stat.NbAttTotal,
+		&stat.NbStaTotal,
 		&stat.CreatedAt,
 		&stat.UpdatedAt,
 	)
@@ -192,8 +267,8 @@ func FindMonthlyStatByDate(archive_date string) *Planning_Stat {
 	return &stat
 }
 
-func AllMonthlyStats() *Planning_Stats {
-	var stats Planning_Stats
+func AllMonthlyStats() *Event_Stats {
+	var stats Event_Stats
 
 	rows, err := TheDb().Query("SELECT * FROM " + db_name_monthly_stat)
 
@@ -205,16 +280,21 @@ func AllMonthlyStats() *Planning_Stats {
 	defer rows.Close()
 
 	for rows.Next() {
-		var stat Planning_Stat
+		var stat Event_Stat
 
 		err := rows.Scan(
 			&stat.Id,
 			&stat.ArchiveDate,
 			&stat.NbPerLocation,
 			&stat.NbPerType,
+			&stat.NbPerPrice,
+			&stat.NbCancel,
 			&stat.NbTotal,
+			&stat.FulfillAvgPerType,
 			&stat.AvgAttPerType,
+			&stat.AvgStaPerType,
 			&stat.NbAttTotal,
+			&stat.NbStaTotal,
 			&stat.CreatedAt,
 			&stat.UpdatedAt,
 		)
